<resources>
    <!--start general -->
    <string name="app_name">Angle of Knife</string>
    <string name="sample_text">Sample_text</string>
    <!--end general  -->

    <!--start activity_main  -->
    <string name="activity_main_title">Your knives:</string>
    <string name="activity_main_exit_message">Press again to exit.</string>
    <!--end activity_main   -->

    <!--start menu_nav  -->
    <string name="menu_nav_feedback">Feedback and support</string>
    <!--end menu_nav   -->

    <!--start activity_feedback  -->
    <string name="activity_feedback_title">Best regards to you:</string>
    <string name="activity_feedback_description"> \t Dear user!
        \n\n\t You have a unique opportunity to participate in the creation of a new application.
        As you may have noticed, the application currently has only basic functionality (there are
        no advertisements). While we have a small number of users, the developers have the
        opportunity to study every wish and, with a very high probability, implement them.
        \n\t If you want it to be more convenient for you to use the application - leave a review
        where you write what exactly you would like to improve. If everything suits you, you could
        just leave a review, we will be very pleased. No review will go unnoticed.
        \n\n\t And I\'ll just leave it here:
    </string>
    <string name="activity_feedback_btn_share">Share the app</string>
    <string name="activity_feedback_btn_rate">Leave feedback.</string>
    <string name="activity_feedback_recomend_text">Let me recommended the app:</string>
    <string name="activity_feedback_recommend_subject" translatable="false">Angle of knife</string>
    <!--end activity_feedback   -->

    <!-- start activity_knife  -->
    <string name="activity_knife_next">Next knife</string>
    <string name="activity_knife_previous">Previous knife</string>
    <string name="activity_knife_your_knife">Your knife:</string>
    <string name="activity_knife_name">Name</string>
    <string name="activity_knife_date">Date</string>
    <string name="activity_knife_description">Description</string>
    <string name="activity_knife_status">Status</string>
    <string name="activity_knife_angel">Angle</string>
    <string name="activity_knife_add">Add</string>
    <string name="activity_knife_edit">Edit</string>
    <string name="activity_knife_delete">Remove</string>
    <string name="activity_knife_save">Save</string>
    <string name="activity_knife_sharpen">Sharpen</string>
    <string name="activity_knife_date_format">dd-MM-yyyy</string>
    <string name="activity_knife_error_wrong_date">Invalid date format</string>
    <string name="activity_knife_error_wrong_angle">Angle can be from 1 to 90</string>
    <string name="activity_knife_delete_message">Are you sure you want to remove this knife?</string>
    <string name="activity_knife_yes">Yes</string>
    <string name="activity_knife_no">No</string>
    <string name="activity_knife_delete_complete_message">Data deleted</string>
    <string name="activity_knife_one_sided_sharpening">One-sided</string>
    <string name="activity_knife_double_sided_sharpening">Double sided</string>
    <string name="activity_knife_sharpening_type">Type</string>

    <!-- end activity knife    -->

    <!-- start activity_angle  -->
    <string name="activity_angle_level">Level</string>
    <string name="activity_angle_done">Done</string>
    <string name="activity_angle_line">__________________</string>
    <string name="activity_angle_horizontal_level">Horizonte: %1$s </string>
    <!-- end activity_angle    -->

    <!-- start stock_data -->
    <string name="stock_data_knife_name">New knife</string>
    <string name="demo_data_pocket_knife">Pocket knife</string>
    <string name="demo_data_chef_knife">Chef\'s knife</string>
    <string name="demo_data_meat_knife">Meat knife</string>
    <string name="demo_data_fish_knife">Fish knife</string>
    <string name="demo_data_fruit_knife">Fruit &amp; Vegetable Knife</string>
    <string name="demo_data_utility_knife">Kitchen Utility Knife</string>
    <string name="demo_data_scissors">Scissors</string>
    <string name="demo_data_knife_description">Demo record with a typical sharpening angle</string>
    <!-- end stock_data    -->






</resources>